@@ -3,7 +3,6 @@
 * TODO Integrate with multiple-cursors.
 
 * TODO Commands:
-- unwrap: Remove containing parentheses.
 - block: Properly select paragraph in all modes.  Currently does not
   always work in org-mode.
 - filler: Implicitly act upon "block".
